<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Car Assistant</string>
    <string name="message_send">Send</string>
    <string name="bond_user_list">Bond Users</string>
    <string name="bond_qr_tip">You can bond phone by scanning Bond QR Code</string>
    <string name="input_message_tip">Input Message</string>
    <string name="empty_message_tip">Message is empty</string>
    <string name="no_message">No Message</string>
    <string name="bond_qr">Bond QR Code</string>
    <string name="title_already_new">Latest version</string>
    <string name="message_already_new">Has been the latest version</string>
    <string name="sure">OK</string>
    <string name="ignore">Ignore this version</string>
    <string name="later">Remind me later</string>
    <string name="title_new_version">Find new version</string>
    <string name="please_go">Please go</string>
    <string name="download2sd">download to sdcard for upgrading</string>
    <string name="change_log">Version change log</string>
    <string name="pickup_prompt">Got the location of your friends(destination is %s), go now and pick them up?</string>
    <string name="appointment_prompt">The destination is %s from appointment, ready to go now</string>
    <string name="gonow">Go</string>
    <string name="cancel">Cancel</string>
    <string name="received_bind_request">Received bind request from %s,</string>
    <string name="agree_key_ok">button</string>
    <string name="agree_key_mid">middle key</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="bindtips">Please press the %2$s of device to confirm the binding request in %1$d seconds</string>
    <string name="agreenow">Agreement</string>
    <string name="refusenow">Refuse</string>
    <string name="delbind">Delete the the binding of %s?</string>
    <string name="connected">(Online)</string>
    <string name="disconnected">(Offline)</string>
    <string name="unbindnow">has unbind with device</string>
    <string name="bondrequest">is sending request to bind the device</string>
    <string name="device_connected">Device Online</string>
    <string name="device_disconnected">Device Offline</string>
    <string name="qrcode_tip">Car Assistant download and Device bund</string>
    <string name="title_download_qr">Car Assistant Download QR Code</string>
    <string name="subtitle_download_qr">You can download Car Assistant by scanning Download QR Code</string>
    <string name="title_bond_qr">Bond QR Code</string>
    <string name="subtitle_bond_qr">After downloaded Car Assistant, you can bond this device by scanning Bond QR Code</string>
    <string name="lowvoltage_alarm">Low voltage protection starts, device would power off now</string>
    <string name="device_alarm">Device is ready</string>
    <string name="start_alarm">Car is Starting</string>
    <string name="shake_alarm">Attention! Car is Shaking</string>
    <string name="image_alarm">Detail of taken photos</string>
    <string name="video_alarm">Detail of recorded videos</string>
    <string name="sos_alarm">SOS Alarm</string>
    <string name="speed_down_alarm">rapid speed down</string>
    <string name="speed_up_alarm">rapid speed up</string>
    <string name="turn_left_alarm">rapid turn left</string>
    <string name="turn_right_alarm">rapid turn right</string>
    <string name="msg_from">Send you message:</string>
    <string name="none">None</string>
    <string name="sim_alert">Please use the valid SIM</string>
</resources>
