<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/download_qr" android:background="@drawable/press_selector" android:layout_width="fill_parent" android:layout_height="60.0dip" android:onClick="onClick">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_centerVertical="true">
                <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_download_qr" android:singleLine="true" />
                <TextView android:textSize="16.0sp" android:textColor="#ff616161" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subtitle_download_qr" android:singleLine="true" />
            </LinearLayout>
        </RelativeLayout>
        <TextView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:id="@id/bond_qr" android:background="@drawable/press_selector" android:layout_width="fill_parent" android:layout_height="60.0dip" android:onClick="onClick">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_centerVertical="true">
                <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_bond_qr" android:singleLine="true" />
                <TextView android:textSize="16.0sp" android:textColor="#ff616161" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subtitle_bond_qr" android:singleLine="true" />
            </LinearLayout>
        </RelativeLayout>
        <TextView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:id="@id/download_qr" android:layout_width="fill_parent" android:layout_height="60.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/photo_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/bond_user_list" android:singleLine="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <ListView android:id="@id/listview" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <com.car.cloud.MessageView android:id="@id/messageview" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>