<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0">
            <TextView android:textSize="18.0sp" android:textColor="@color/photo_color" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/bond_user_list" android:singleLine="true" android:layout_centerVertical="true" />
            <TextView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="20.0sp" android:gravity="center" android:id="@id/none" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/none" android:layout_weight="1.0" />
            <ListView android:id="@id/listview" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="40.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="2.0">
            <TextView android:textSize="17.0sp" android:layout_gravity="center_horizontal" android:id="@id/deviceid" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="18.0sp" android:layout_gravity="center_horizontal" android:id="@id/status" android:paddingTop="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_disconnected" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/qrcode_img" android:layout_width="240.0dip" android:layout_height="240.0dip" android:scaleType="center" />
            <TextView android:textSize="20.0sp" android:layout_gravity="center_horizontal" android:id="@id/tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/qrcode_tip" />
        </LinearLayout>
    </LinearLayout>
    <com.car.cloud.MessageView android:id="@id/messageview" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>